syntax = "proto3";

package meta;

import "catalog.proto";
import "common.proto";
import "hummock.proto";
import "plan_common.proto";
import "stream_plan.proto";

option optimize_for = SPEED;

// will be deprecated and replaced by catalog.Table and catalog.Source
message Table {
  plan_common.TableRefId table_ref_id = 1;
  string table_name = 2;
  repeated plan_common.ColumnDesc column_descs = 3;
  uint64 version = 4;
  oneof info {
    plan_common.StreamSourceInfo stream_source = 5;
    plan_common.TableSourceInfo table_source = 6;
    plan_common.MaterializedViewInfo materialized_view = 7;
  }
}

// will be deprecated and replaced by catalog.Database
message Database {
  plan_common.DatabaseRefId database_ref_id = 1;
  string database_name = 2;
  uint64 version = 3;
}

// will be deprecated and replaced by catalog.Schema
message Schema {
  plan_common.SchemaRefId schema_ref_id = 1;
  string schema_name = 2;
  uint64 version = 3;
}

// Below for catalog service.
// will be deprecated and replaced by DdlService
message CreateRequest {
  uint32 node_id = 1;
  oneof catalog_body {
    Database database = 2;
    Schema schema = 3;
    Table table = 4;
  }
}

// will be deprecated and replaced by DdlService
message CreateResponse {
  common.Status status = 1;
  int32 id = 2;
  uint64 version = 3;
}

// will be deprecated and replaced by DdlService
message DropRequest {
  uint32 node_id = 1;
  oneof catalog_id {
    plan_common.DatabaseRefId database_id = 2;
    plan_common.SchemaRefId schema_id = 3;
    plan_common.TableRefId table_id = 4;
  }
}

// will be deprecated and replaced by DdlService
message DropResponse {
  common.Status status = 1;
  uint64 version = 2;
}

// will be deprecated and replaced by NotificationService
message GetCatalogRequest {}

// will be deprecated and replaced by SubscribeFrontendSnapshot
message Catalog {
  uint64 version = 1;
  repeated Database databases = 2;
  repeated Schema schemas = 3;
  repeated Table tables = 4;
}

// will be deprecated and replaced by DdlService
message GetCatalogResponse {
  common.Status status = 1;
  Catalog catalog = 2;
}

// will be deprecated and replaced by DdlService
service CatalogService {
  rpc GetCatalog(GetCatalogRequest) returns (GetCatalogResponse);
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Drop(DropRequest) returns (DropResponse);
}

// Below for heartbeat.

message HeartbeatRequest {
  uint32 node_id = 1;
  common.WorkerType worker_type = 2;
}

message HeartbeatResponse {
  common.Status status = 1;
}

service HeartbeatService {
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

// Below for stream manager.

// Fragments of a Materialized View
message TableFragments {
  // Current state of actor
  enum ActorState {
    // Initial state after creation
    INACTIVE = 0;
    // Running normally
    RUNNING = 1;
  }
  // Runtime information of an actor
  message ActorStatus {
    // Current on which parallel unit
    common.ParallelUnit parallel_unit = 1;
    // Current state
    ActorState state = 2;
  }
  message Fragment {
    enum FragmentDistributionType {
      SINGLE = 0;
      HASH = 1;
    }
    uint32 fragment_id = 1;
    stream_plan.FragmentType fragment_type = 2;
    FragmentDistributionType distribution_type = 3;
    repeated stream_plan.StreamActor actors = 4;
    // Vnode mapping (which should be set in upstream dispatcher) of the fragment.
    common.ParallelUnitMapping vnode_mapping = 5;
  }
  uint32 table_id = 1;
  map<uint32, Fragment> fragments = 2;
  map<uint32, ActorStatus> actor_status = 3;
}

// TODO: remove this when dashboard refactored.
message ActorLocation {
  common.WorkerNode node = 1;
  repeated stream_plan.StreamActor actors = 2;
}

// will be deprecated and replaced by DdlService
message CreateMaterializedViewRequest {
  uint32 node_id = 1;
  // TODO: remove this, do catalog init in Meta and return in response.
  plan_common.TableRefId table_ref_id = 2;
  stream_plan.StreamFragmentGraph fragment_graph = 3;
}

// will be deprecated and replaced by DdlService
message CreateMaterializedViewResponse {
  common.Status status = 1;
}

// will be deprecated and replaced by DdlService
message DropMaterializedViewRequest {
  uint32 node_id = 1;
  plan_common.TableRefId table_ref_id = 2;
}

// will be deprecated and replaced by DdlService
message DropMaterializedViewResponse {
  common.Status status = 1;
}

message FlushRequest {}

message FlushResponse {
  common.Status status = 1;
}

service StreamManagerService {
  rpc Flush(FlushRequest) returns (FlushResponse);
}

// Below for cluster service.

message AddWorkerNodeRequest {
  common.WorkerType worker_type = 1;
  common.HostAddress host = 2;
}

message AddWorkerNodeResponse {
  common.Status status = 1;
  common.WorkerNode node = 2;
}

message ActivateWorkerNodeRequest {
  common.HostAddress host = 1;
}

message ActivateWorkerNodeResponse {
  common.Status status = 1;
}

message DeleteWorkerNodeRequest {
  common.HostAddress host = 1;
}

message DeleteWorkerNodeResponse {
  common.Status status = 1;
}

message ListAllNodesRequest {
  common.WorkerType worker_type = 1;
  // Whether to include nodes still starting
  bool include_starting_nodes = 2;
}

message ListAllNodesResponse {
  common.Status status = 1;
  repeated common.WorkerNode nodes = 2;
}

service ClusterService {
  rpc AddWorkerNode(AddWorkerNodeRequest) returns (AddWorkerNodeResponse);
  rpc ActivateWorkerNode(ActivateWorkerNodeRequest) returns (ActivateWorkerNodeResponse);
  rpc DeleteWorkerNode(DeleteWorkerNodeRequest) returns (DeleteWorkerNodeResponse);
  rpc ListAllNodes(ListAllNodesRequest) returns (ListAllNodesResponse);
}

// Below for notification service.
message SubscribeRequest {
  common.WorkerType worker_type = 1;
  common.HostAddress host = 2;
}

message MetaSnapshot {
  repeated common.WorkerNode nodes = 1;
  repeated catalog.Database database = 2;
  repeated catalog.Schema schema = 3;
  repeated catalog.Source source = 4;
  repeated catalog.Table table = 5;
  repeated catalog.VirtualTable view = 6;
}

message SubscribeResponse {
  enum Operation {
    INVALID = 0;
    ADD = 1;
    DELETE = 2;
    UPDATE = 3;
    SNAPSHOT = 4;
  }
  common.Status status = 1;
  Operation operation = 2;
  uint64 version = 3;
  oneof info {
    common.WorkerNode node = 4;
    catalog.Database database = 5;
    catalog.Schema schema = 6;
    catalog.Table table = 7;
    catalog.Source source = 8;
    MetaSnapshot snapshot = 9;
    hummock.HummockSnapshot hummock_snapshot = 10;
  }
}

service NotificationService {
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
}
